--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,143 @@ h1, h2, h3, h4, h5, h6 {
   box-sizing: border-box;
 }
 
+.gallery-section {
+  width: 100vw;
+  height: max-content;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery-section h2 {
+  margin-bottom: 24px;
+  font-size: 4rem;
+}
+
+.gallery-section .gallery-grid {
+  width: 95vw;
+  display: grid;
+  box-sizing: border-box;
+  grid-gap: 2px;
+  grid-template-columns: repeat(8, 11.875vw); 
+  grid-template-rows: repeat(8, 11.875vw); 
+  grid-template-areas: 
+    "img1 img1 img1 img1 img1 img4 img4 img4"
+    "img1 img1 img1 img1 img1 img4 img4 img4"
+    "img1 img1 img1 img1 img1 img4 img4 img4"
+    "img2 img2 img2 img3 img3 img5 img5 img5"
+    "img2 img2 img2 img3 img3 img5 img5 img5"
+    "img7 img7 img7 img6 img6 img6 img6 img6"
+    "img7 img7 img7 img6 img6 img6 img6 img6"
+    "img7 img7 img7 img6 img6 img6 img6 img6"; 
+}
+
+.gallery-section .gallery-grid img {
+  position: relative;
+  transition: transform 0.30s ease-in-out, filter 0.30s ease-in-out;
+  -webkit-transition: transform 0.30s ease-in-out, filter 0.30s ease-in-out;
+  -moz-transition: transform 0.30s ease-in-out, filter 0.30s ease-in-out;
+  -ms-transition: transform 0.30s ease-in-out, filter 0.30s ease-in-out;
+  -o-transition: transform 0.30s ease-in-out, filter 0.30s ease-in-out;
+}
+
+.gallery-section .gallery-grid img:hover {
+  transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+  -moz-transform: scale(0.95);
+  -ms-transform: scale(0.95);
+  -o-transform: scale(0.95);
+}
+
+.gallery-section .gallery-grid img:nth-child(1) {
+  grid-area: img1;
+  width: calc(5 * 11.875vw);
+  height: calc(3 * 11.875vw);
+  object-fit: cover;
+}
+
+.gallery-section .gallery-grid img:nth-child(1):hover {
+  filter: grayscale(1);
+  -webkit-filter: grayscale(1);
+}
+
+.gallery-section .gallery-grid img:nth-child(2) {
+  grid-area: img2;
+  width: calc(3 * 11.875vw);
+  height: calc(2 * 11.875vw);
+  object-fit: cover;
+}
+
+.gallery-section .gallery-grid img:nth-child(2):hover {
+  filter: sepia(1);
+  -webkit-filter: sepia(1);
+}
+
+.gallery-section .gallery-grid img:nth-child(3) {
+  grid-area: img3;
+  width: calc(2 * 11.875vw);
+  height: calc(2 * 11.875vw);
+  object-fit: cover;
+}
+
+.gallery-section .gallery-grid img:nth-child(3):hover {
+  filter: hue-rotate(180deg);
+  -webkit-filter: hue-rotate(180deg);
+}
+
+.gallery-section .gallery-grid img:nth-child(4) {
+  grid-area: img4;
+  width: calc(3 * 11.875vw);
+  height: calc(3 * 11.875vw);
+  object-fit: cover;
+}
+
+.gallery-section .gallery-grid img:nth-child(4):hover {
+  filter: invert(1);
+  -webkit-filter: invert(1);
+}
+
+
+.gallery-section .gallery-grid img:nth-child(5) {
+  grid-area: img5;
+  width: calc(3 * 11.875vw);
+  height: calc(2 * 11.875vw);
+  object-fit: cover;
+}
+
+.gallery-section .gallery-grid img:nth-child(5):hover {
+  filter: drop-shadow(0 0 10px #222222);
+  -webkit-filter: drop-shadow(0 0 10px #222222);
+}
+
+
+.gallery-section .gallery-grid img:nth-child(6) {
+  grid-area: img6;
+  width: calc(5 * 11.875vw);
+  height: calc(3 * 11.875vw);
+  object-fit: cover;
+}
+
+.gallery-section .gallery-grid img:nth-child(6):hover {
+  filter: contrast(75%);
+  -webkit-filter: contrast(75%);
+}
+
+.gallery-section .gallery-grid img:nth-child(7) {
+  grid-area: img7;
+  width: calc(3 * 11.875vw);
+  height: calc(3 * 11.875vw);
+  object-fit: cover;
+}
+
+.gallery-section .gallery-grid img:nth-child(7):hover {
+  filter: brightness(75%);
+  -webkit-filter: brightness(75%);
+}
+
+
 .cta-banner h3 {
   margin-bottom: 32px;
 }
@@ -341,7 +478,6 @@ p ion-icon:hover {
     font-size: .75rem;
   }
 
-
   .feature-card h3, .feature-card p {
     text-align: center;
   }
@@ -368,4 +504,18 @@ p ion-icon:hover {
     width: 178px;
   }
 
+}
+
+
+@media only screen and (max-width: 767px) {
+   .gallery-section .gallery-grid {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .gallery-section .gallery-grid img {
+    width: 95vw !important;
+    height: auto !important;
+    margin-bottom: 2px;
+  }
 }
